I started replacing the labels on the variable from the properties file

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -1,5 +1,3 @@
-
-
 index_jsp.button.Login1 = Login
 index_jsp.label.Username = Username
 index_jsp.placeholder.Username=Enter Username
@@ -25,10 +23,9 @@ st_cashier_navbar_jsp.href.Info = Info
 st_cashier_navbar_jsp.href.Change_Language = Change Language
 st_cashier_navbar_jsp.label.Cash_register_at_your_service= Cash register at your service
 
-st_cashier_jsp.label.st_cashier_successfully_logged_in! = Elder cashier successfully logged in!
+st_cashier_jsp.label.st_cashier_successfully_logged_in! = st_cashier successfully logged in!
 st_cashier_jsp.placeholder.Search_product_by_name.. = Search product by name..
-st_cashier_jsp.label.idreceipt = receipt id
+st_cashier_jsp.label.idreceipt = idreceipt
 st_cashier_jsp.label.cashier_name = cashier name
 st_cashier_jsp.label.closing_time = closing time
 st_cashier_jsp.label.total_sum = total sum
-
