--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -8,6 +8,13 @@ index_jsp.checkbox.Remember_me = Запомнить меня
 index_jsp.button.Cancel = Отмена
 index_jsp.href.sign_up = Зарегистрироваться
 
+sign_up_jsp.label.fill_inform = Пожалуйста, заполните регистрационную форму
+sign_up_jsp.button.sign_up = Зарегистрироваться
+sign_up_jsp.choose_a_role = Выберите должность
+sign_up_jsp.merchandiser = товаровед
+sign_up_jsp.st_cashier = старший кассир
+sign_up_jsp.cashier = кассир
+
 navbar_jsp.href.Log_out = Выйти
 navbar_jsp.href.Sign_Up = Зарегистрироваться
 navbar_jsp.href.Info = Информация
@@ -22,6 +29,7 @@ st_cashier_navbar_jsp.href.All_Reports = Все отчеты
 st_cashier_navbar_jsp.href.Info = Информация
 st_cashier_navbar_jsp.href.Change_Language = Поменять Язык
 st_cashier_navbar_jsp.label.Cash_register_at_your_service= Кассовый аппарат к вашим услугам
+merchandiser_navbar_jsp.href.Add_new_Product = Добавить новый продукт
 
 st_cashier_jsp.label.st_cashier_successfully_logged_in! = Старший кассир успешно авторизовался!
 st_cashier_jsp.placeholder.Search_product_by_name.. = Поиск продукта по названию..
