перевел все страницы связаные с товароведом

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -1,3 +1,17 @@
+button_Return = Return
+button_Add = Add
+button_Save = Save
+button_Delete = Delete
+
+Success! = Success!
+Error! = Error!
+Message.The_product_has_been_changed! = The product has been changed!
+Message.New_product_was_added_successfully! = New product was added successfully!
+Message.The_product_has_been_deleted! = The product has been deleted!
+Message.Oops1=  Oops,something went wrong... Check your input
+Message.product_not_added =  The new product has not been added. Perhaps a product with that name already exists!
+Message.product_not_changed = The new product has not been changed
+
 index_jsp.button.Login1 = Login
 index_jsp.label.Username = Username
 index_jsp.placeholder.Username=Enter Username
@@ -37,3 +51,12 @@ st_cashier_jsp.label.idreceipt = idreceipt
 st_cashier_jsp.label.cashier_name = cashier name
 st_cashier_jsp.label.closing_time = closing time
 st_cashier_jsp.label.total_sum = total sum
+
+merchandiser_jsp.title_Merchandiser = Merchandiser
+merchandiser_jsp.label_merchandiser_successfully_logged_in = merchandiser successfully logged in!
+merchandiser_jsp.table.idproducts = Product id
+merchandiser_jsp.table.name = Name
+merchandiser_jsp.table.quantity = Quantity
+merchandiser_jsp.table.weight = Weight
+merchandiser_jsp.table.tonnage = Tonnage
+merchandiser_jsp.table.price = Price
