--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -1,3 +1,18 @@
+button_Return = Назад
+button_Add = Добавить
+button_Save = Сохранить
+button_Delete = Удалить
+
+Success! = Успех!
+Error! = Ошибка!
+
+Message.The_product_has_been_changed! = Продукт был изменен!
+Message.New_product_was_added_successfully! = Новый продукт успешно добавлен!
+Message.The_product_has_been_deleted! = Продукт был удален!
+Message.Oops1= Упс, что-то пошло не так... Проверьте введенные данные.
+Message.product_not_added =  Новый товар не был добавлен. Возможно, продукт с таким названием уже существует!
+Message.product_not_changed = Новый продукт не был изменен
+
 index_jsp.button.Login1 = Авторизоваться
 index_jsp.label.Username = Имя пользователя
 index_jsp.placeholder.Username=Введите имя пользователя
@@ -37,3 +52,12 @@ st_cashier_jsp.label.idreceipt = Id чека
 st_cashier_jsp.label.cashier_name = Имя кассира
 st_cashier_jsp.label.closing_time = Время закрытия
 st_cashier_jsp.label.total_sum = Всего
+
+merchandiser_jsp.title_Merchandiser = Товаровед
+merchandiser_jsp.label_merchandiser_successfully_logged_in = товаровед авторизирован успешно!
+merchandiser_jsp.table.idproducts = Id продукта
+merchandiser_jsp.table.name = Название
+merchandiser_jsp.table.quantity = Колличество
+merchandiser_jsp.table.weight = Вес
+merchandiser_jsp.table.tonnage = Весовой ли
+merchandiser_jsp.table.price = Цена
