перевел все страницы связаные со старшим кассиром(70% сделано)

--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -2,6 +2,8 @@ button_Return = Назад
 button_Add = Добавить
 button_Save = Сохранить
 button_Delete = Удалить
+button_See_more = Больше
+button_Actions = Действия
 
 Success! = Успех!
 Error! = Ошибка!
@@ -12,6 +14,9 @@ Message.The_product_has_been_deleted! = Продукт был удален!
 Message.Oops1= Упс, что-то пошло не так... Проверьте введенные данные.
 Message.product_not_added =  Новый товар не был добавлен. Возможно, продукт с таким названием уже существует!
 Message.product_not_changed = Новый продукт не был изменен
+Message.product_deleted_from_receipt = Товар удален из чека!
+Message.receipt_deleted = Чек удален!
+Message.Cannot_generate_report =В настоящее время не удается создать отчет. Возможно, отчет на сегодня уже создан. Пожалуйста, повторите попытку позже...
 
 index_jsp.button.Login1 = Авторизоваться
 index_jsp.label.Username = Имя пользователя
@@ -52,6 +57,7 @@ st_cashier_jsp.label.idreceipt = Id чека
 st_cashier_jsp.label.cashier_name = Имя кассира
 st_cashier_jsp.label.closing_time = Время закрытия
 st_cashier_jsp.label.total_sum = Всего
+st_cashier_jsp.label.Receipt_Id = Id Чека
 
 merchandiser_jsp.title_Merchandiser = Товаровед
 merchandiser_jsp.label_merchandiser_successfully_logged_in = товаровед авторизирован успешно!
@@ -61,3 +67,20 @@ merchandiser_jsp.table.quantity = Колличество
 merchandiser_jsp.table.weight = Вес
 merchandiser_jsp.table.tonnage = Весовой ли
 merchandiser_jsp.table.price = Цена
+
+st_cashier_jsp.title_St_Cashier = Старший Кассир
+
+AllReports_jsp.label_All_Reports = Все отчеты:
+AllReports_jsp.table.Id_Report = Id отчета
+AllReports_jsp.table.Quantity_of_receipts = Количество чеков
+AllReports_jsp.table.Last_receipt_id = Id последнего чека
+AllReports_jsp.table.Time = Время создания
+AllReports_jsp.table.Total_sum = Итоговая сумма
+
+report.label.Report = Отчет
+report.label.Current_time = Текущее время:
+report.label.Quantity_of_receipts =Количество чеков:
+report.label.Last_receipt_id = Id последнего чека:
+report.label.Total_Sum = Итоговая сумма:
+
+Xreport.label.X-report = X-отчет
