перевел все страницы, далее делаем кнопку

--- a/src/main/resources/resources_en.properties
+++ b/src/main/resources/resources_en.properties
@@ -4,6 +4,9 @@ button_Save = Save
 button_Delete = Delete
 button_See_more = See more
 button_Actions = Actions
+button_Create_new_receipt = Create new receipt
+button_Close_receipt = Close receipt
+button_Add_To_Receipt = Add to receipt
 
 Success! = Success!
 Error! = Error!
@@ -16,6 +19,8 @@ Message.product_not_changed = The new product has not been changed
 Message.product_deleted_from_receipt = The product has been deleted from receipt!
 Message.receipt_deleted = The receipt has been deleted!
 Message.Cannot_generate_report =Cannot generate report at this time. Perhaps the report for today has already been created. Please try again later...
+Message.Added_to_Basket =  New product was added to basket successfully!
+Message.Receipt_Was_Closed =  Receipt was successfully closed!
 
 index_jsp.button.Login1 = Login
 index_jsp.label.Username = Username
@@ -83,3 +88,6 @@ report.label.Last_receipt_id = Last receipt id:
 report.label.Total_Sum = Total Sum:
 
 Xreport.label.X-report = X-report
+
+cashier.label.cashier_successfully_logged_in = cashier successfully logged in!
+cashier.header.Cashier = Cashier
