--- a/src/main/resources/resources_ru.properties
+++ b/src/main/resources/resources_ru.properties
@@ -4,6 +4,9 @@ button_Save = Сохранить
 button_Delete = Удалить
 button_See_more = Больше
 button_Actions = Действия
+button_Create_new_receipt = Создать новый чек
+button_Close_receipt = Закрыть чек
+button_Add_To_Receipt = Добавить в чек
 
 Success! = Успех!
 Error! = Ошибка!
@@ -17,6 +20,8 @@ Message.product_not_changed = Новый продукт не был измене
 Message.product_deleted_from_receipt = Товар удален из чека!
 Message.receipt_deleted = Чек удален!
 Message.Cannot_generate_report =В настоящее время не удается создать отчет. Возможно, отчет на сегодня уже создан. Пожалуйста, повторите попытку позже...
+Message.Added_to_Basket =  Новый товар успешно добавлен в корзину!
+Message.Receipt_Was_Closed =  Чек успешно закрыт!
 
 index_jsp.button.Login1 = Авторизоваться
 index_jsp.label.Username = Имя пользователя
@@ -57,7 +62,7 @@ st_cashier_jsp.label.idreceipt = Id чека
 st_cashier_jsp.label.cashier_name = Имя кассира
 st_cashier_jsp.label.closing_time = Время закрытия
 st_cashier_jsp.label.total_sum = Всего
-st_cashier_jsp.label.Receipt_Id = Id Чека
+st_cashier_jsp.label.Receipt_Id = Id чека
 
 merchandiser_jsp.title_Merchandiser = Товаровед
 merchandiser_jsp.label_merchandiser_successfully_logged_in = товаровед авторизирован успешно!
@@ -84,3 +89,6 @@ report.label.Last_receipt_id = Id последнего чека:
 report.label.Total_Sum = Итоговая сумма:
 
 Xreport.label.X-report = X-отчет
+
+cashier.label.cashier_successfully_logged_in = кассир авторизирован успешно!
+cashier.header.Cashier = Кассир
