Подправил код jsp-страниц(убрал лишнее)+добавил валидацию для чеков без продуктов

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -24,6 +24,7 @@ Message.receipt_deleted = The receipt has been deleted!
 Message.Cannot_generate_report =Cannot generate report at this time. Perhaps the report for today has already been created. Please try again later...
 Message.Added_to_Basket =  New product was added to basket successfully!
 Message.Receipt_Was_Closed =  Receipt was successfully closed!
+Message.ProdReceiptNotFound = The products of this receipt were not found. Therefore, they cannot be viewed.
 
 index_jsp.button.Login1 = Login
 index_jsp.label.Username = Username
