--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -25,6 +25,7 @@ Message.receipt_deleted = Чек удален!
 Message.Cannot_generate_report =В настоящее время не удается создать отчет. Возможно, отчет на сегодня уже создан. Пожалуйста, повторите попытку позже...
 Message.Added_to_Basket =  Новый товар успешно добавлен в корзину!
 Message.Receipt_Was_Closed =  Чек успешно закрыт!
+Message.ProdReceiptNotFound = Продукты этого чека не были найдены. Следовательно, просмотреть их невозможно.
 
 index_jsp.button.Login1 = Авторизоваться
 index_jsp.label.Username = Имя пользователя
