создал страницу Info о программе

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -96,3 +96,17 @@ Xreport.label.X-report = X-отчет
 
 cashier.label.cashier_successfully_logged_in = кассир авторизирован успешно!
 cashier.header.Cashier = Кассир
+
+Info.label = Информация о программе “Кассовый аппарат”
+Info.author = Создатель: Химий Максим
+Info.text = Есть роли: кассир, старший кассир, товаровед.
+Info.text0 =Товаровед может создавать товары и указывать их количество на складе.
+Info.text1 =Кассир имеет возможность:
+Info.text2 =- создать заказ (чек);
+Info.text3 =- добавить выбранные товары по их коду или названию товара в заказ;
+Info.text4 =- указать/изменить количество определенного товара или вес;
+Info.text5 =- закрыть заказ (чек).
+Info.text6 =Старший кассир имеет возможность:
+Info.text7 =- отменить чек;
+Info.text8 =- отменить товар в чеке;
+Info.text9 =– сделать X и … отчеты.
