пофиксил проблему с регистрацией

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -40,9 +40,9 @@ index_jsp.href.sign_up = Зарегистрироваться
 sign_up_jsp.label.fill_inform = Пожалуйста, заполните регистрационную форму
 sign_up_jsp.button.sign_up = Зарегистрироваться
 sign_up_jsp.choose_a_role = Выберите должность
-sign_up_jsp.merchandiser = товаровед
-sign_up_jsp.st_cashier = старший кассир
-sign_up_jsp.cashier = кассир
+sign_up_jsp.merchandiser = merchandiser
+sign_up_jsp.st_cashier = st_cashier
+sign_up_jsp.cashier = cashier
 
 navbar_jsp.href.Log_out = Выйти
 navbar_jsp.href.Sign_Up = Зарегистрироваться
