Добавил страницу Info

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -99,7 +99,7 @@ cashier.label.cashier_successfully_logged_in = cashier successfully logged in!
 cashier.header.Cashier = Cashier
 
 Info.label = Information about the Cash Register program
-Info.author = Creator: Maxim Khimii
+Info.author = Creator: Maksym Khimii
 Info.text = There are roles: cashier, elder cashier, merchandiser.
 Info.text0 =The merchandiser can create products and indicate their quantity in the warehouse.
 Info.text1 =The cashier has the ability to:
